syntax = "proto3";
package svarog;
option java_package = "com.cregis.svarog.pb";

service MpcSessionManager {
    rpc NewSession(SessionConfig) returns (SessionId);
    rpc GetSessionConfig(SessionId) returns (SessionConfig);
    rpc Inbox(VecMessage) returns (Void);
    rpc Outbox(VecMessage) returns (VecMessage);
    rpc Ping(Void) returns (EchoMessage);
}

message SessionConfig {
    string sesman_url = 2;
    string session_id = 3;
    uint64 threshold = 4;
    map<string, bool> players = 5;
    map<string, bool> players_reshared = 6;
}

message SessionId {
    string value = 1;
}

// 主键看起来分成5个部分, 实际上只有topic字段有用.
message Message {
    string session_id = 1;
    string topic = 2;
    uint64 src = 3;
    uint64 dst = 4;
    uint64 seq = 5;
    optional bytes obj = 6;
}

message VecMessage {
    repeated Message values = 1;
}

message EchoMessage {
    string value =  1;
}

message Void {}